# bevy_proc_aud

./: Cargo.toml  flake.nix
examples/: arcane_attack.rs  custom_synth.rs  ear_ringing.rs  explosion.rs  heartbeat.rs  lightning.rs  sword_slash.rs
src/: lib.rs  plugin.rs
src/components/: effect.rs  filter.rs  lifetime.rs  mod.rs  synth.rs
src/dsp/: graph_builder.rs  mod.rs  param.rs  source.rs
src/presets/: arcane_attack.rs  blunt_impact.rs  ear_ringing.rs  explosion.rs  heartbeat.rs  lightning.rs  mod.rs  sword_slash.rs
src/systems/: build.rs  lifecycle.rs  mod.rs  sync.rs
